fix(title): z-index

--- a/static/index.less
+++ b/static/index.less
@@ -12,7 +12,6 @@ body {
 }
 .title {
     position: fixed;
-    z-index: 99;
     top: 0;
     margin: 0;
     padding-top: 20px;
